seaqt/QtWidgets/gen_qgraphicssceneevent.h

typedef struct QEvent QEvent;
typedef struct QGraphicsSceneContextMenuEvent QGraphicsSceneContextMenuEvent;
typedef struct QGraphicsSceneEvent QGraphicsSceneEvent;
typedef struct QGraphicsSceneHoverEvent QGraphicsSceneHoverEvent;
typedef struct QGraphicsSceneMouseEvent QGraphicsSceneMouseEvent;
typedef struct QGraphicsSceneWheelEvent QGraphicsSceneWheelEvent;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QWidget QWidget;
typedef struct VirtualQGraphicsSceneEvent VirtualQGraphicsSceneEvent;
typedef struct QGraphicsSceneEvent_VTable{
	void (*destructor)(VirtualQGraphicsSceneEvent* self);
	void (*setAccepted)(VirtualQGraphicsSceneEvent* self, bool accepted);
	QEvent* (*clone)(const VirtualQGraphicsSceneEvent* self);
}QGraphicsSceneEvent_VTable;
VirtualQGraphicsSceneEvent* QGraphicsSceneEvent_new(const QGraphicsSceneEvent_VTable* vtbl, size_t vdata, int type);
QWidget* QGraphicsSceneEvent_widget(const QGraphicsSceneEvent* self);
void QGraphicsSceneEvent_setWidget(QGraphicsSceneEvent* self, QWidget* widget);
unsigned long long QGraphicsSceneEvent_timestamp(const QGraphicsSceneEvent* self);
void QGraphicsSceneEvent_setTimestamp(QGraphicsSceneEvent* self, unsigned long long ts);
void QGraphicsSceneEvent_virtualbase_setAccepted(VirtualQGraphicsSceneEvent* self, bool accepted);
QEvent* QGraphicsSceneEvent_virtualbase_clone(const VirtualQGraphicsSceneEvent* self);
void QGraphicsSceneEvent_delete(QGraphicsSceneEvent* self);
typedef struct VirtualQGraphicsSceneMouseEvent VirtualQGraphicsSceneMouseEvent;
typedef struct QGraphicsSceneMouseEvent_VTable{
	void (*destructor)(VirtualQGraphicsSceneMouseEvent* self);
	void (*setAccepted)(VirtualQGraphicsSceneMouseEvent* self, bool accepted);
	QEvent* (*clone)(const VirtualQGraphicsSceneMouseEvent* self);
}QGraphicsSceneMouseEvent_VTable;
VirtualQGraphicsSceneMouseEvent* QGraphicsSceneMouseEvent_new(const QGraphicsSceneMouseEvent_VTable* vtbl, size_t vdata);
VirtualQGraphicsSceneMouseEvent* QGraphicsSceneMouseEvent_new2(const QGraphicsSceneMouseEvent_VTable* vtbl, size_t vdata, int type);
QPointF* QGraphicsSceneMouseEvent_pos(const QGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_setPos(QGraphicsSceneMouseEvent* self, QPointF* pos);
QPointF* QGraphicsSceneMouseEvent_scenePos(const QGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_setScenePos(QGraphicsSceneMouseEvent* self, QPointF* pos);
QPoint* QGraphicsSceneMouseEvent_screenPos(const QGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_setScreenPos(QGraphicsSceneMouseEvent* self, QPoint* pos);
QPointF* QGraphicsSceneMouseEvent_buttonDownPos(const QGraphicsSceneMouseEvent* self, int button);
void QGraphicsSceneMouseEvent_setButtonDownPos(QGraphicsSceneMouseEvent* self, int button, QPointF* pos);
QPointF* QGraphicsSceneMouseEvent_buttonDownScenePos(const QGraphicsSceneMouseEvent* self, int button);
void QGraphicsSceneMouseEvent_setButtonDownScenePos(QGraphicsSceneMouseEvent* self, int button, QPointF* pos);
QPoint* QGraphicsSceneMouseEvent_buttonDownScreenPos(const QGraphicsSceneMouseEvent* self, int button);
void QGraphicsSceneMouseEvent_setButtonDownScreenPos(QGraphicsSceneMouseEvent* self, int button, QPoint* pos);
QPointF* QGraphicsSceneMouseEvent_lastPos(const QGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_setLastPos(QGraphicsSceneMouseEvent* self, QPointF* pos);
QPointF* QGraphicsSceneMouseEvent_lastScenePos(const QGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_setLastScenePos(QGraphicsSceneMouseEvent* self, QPointF* pos);
QPoint* QGraphicsSceneMouseEvent_lastScreenPos(const QGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_setLastScreenPos(QGraphicsSceneMouseEvent* self, QPoint* pos);
int QGraphicsSceneMouseEvent_buttons(const QGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_setButtons(QGraphicsSceneMouseEvent* self, int buttons);
int QGraphicsSceneMouseEvent_button(const QGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_setButton(QGraphicsSceneMouseEvent* self, int button);
int QGraphicsSceneMouseEvent_modifiers(const QGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_setModifiers(QGraphicsSceneMouseEvent* self, int modifiers);
int QGraphicsSceneMouseEvent_source(const QGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_setSource(QGraphicsSceneMouseEvent* self, int source);
int QGraphicsSceneMouseEvent_flags(const QGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_setFlags(QGraphicsSceneMouseEvent* self, int flags);
void QGraphicsSceneMouseEvent_virtualbase_setAccepted(VirtualQGraphicsSceneMouseEvent* self, bool accepted);
QEvent* QGraphicsSceneMouseEvent_virtualbase_clone(const VirtualQGraphicsSceneMouseEvent* self);
void QGraphicsSceneMouseEvent_delete(QGraphicsSceneMouseEvent* self);
typedef struct VirtualQGraphicsSceneWheelEvent VirtualQGraphicsSceneWheelEvent;
typedef struct QGraphicsSceneWheelEvent_VTable{
	void (*destructor)(VirtualQGraphicsSceneWheelEvent* self);
	void (*setAccepted)(VirtualQGraphicsSceneWheelEvent* self, bool accepted);
	QEvent* (*clone)(const VirtualQGraphicsSceneWheelEvent* self);
}QGraphicsSceneWheelEvent_VTable;
VirtualQGraphicsSceneWheelEvent* QGraphicsSceneWheelEvent_new(const QGraphicsSceneWheelEvent_VTable* vtbl, size_t vdata);
VirtualQGraphicsSceneWheelEvent* QGraphicsSceneWheelEvent_new2(const QGraphicsSceneWheelEvent_VTable* vtbl, size_t vdata, int type);
QPointF* QGraphicsSceneWheelEvent_pos(const QGraphicsSceneWheelEvent* self);
void QGraphicsSceneWheelEvent_setPos(QGraphicsSceneWheelEvent* self, QPointF* pos);
QPointF* QGraphicsSceneWheelEvent_scenePos(const QGraphicsSceneWheelEvent* self);
void QGraphicsSceneWheelEvent_setScenePos(QGraphicsSceneWheelEvent* self, QPointF* pos);
QPoint* QGraphicsSceneWheelEvent_screenPos(const QGraphicsSceneWheelEvent* self);
void QGraphicsSceneWheelEvent_setScreenPos(QGraphicsSceneWheelEvent* self, QPoint* pos);
int QGraphicsSceneWheelEvent_buttons(const QGraphicsSceneWheelEvent* self);
void QGraphicsSceneWheelEvent_setButtons(QGraphicsSceneWheelEvent* self, int buttons);
int QGraphicsSceneWheelEvent_modifiers(const QGraphicsSceneWheelEvent* self);
void QGraphicsSceneWheelEvent_setModifiers(QGraphicsSceneWheelEvent* self, int modifiers);
int QGraphicsSceneWheelEvent_delta(const QGraphicsSceneWheelEvent* self);
void QGraphicsSceneWheelEvent_setDelta(QGraphicsSceneWheelEvent* self, int delta);
int QGraphicsSceneWheelEvent_orientation(const QGraphicsSceneWheelEvent* self);
void QGraphicsSceneWheelEvent_setOrientation(QGraphicsSceneWheelEvent* self, int orientation);
int QGraphicsSceneWheelEvent_phase(const QGraphicsSceneWheelEvent* self);
void QGraphicsSceneWheelEvent_setPhase(QGraphicsSceneWheelEvent* self, int scrollPhase);
QPoint* QGraphicsSceneWheelEvent_pixelDelta(const QGraphicsSceneWheelEvent* self);
void QGraphicsSceneWheelEvent_setPixelDelta(QGraphicsSceneWheelEvent* self, QPoint* delta);
bool QGraphicsSceneWheelEvent_isInverted(const QGraphicsSceneWheelEvent* self);
void QGraphicsSceneWheelEvent_setInverted(QGraphicsSceneWheelEvent* self, bool inverted);
void QGraphicsSceneWheelEvent_virtualbase_setAccepted(VirtualQGraphicsSceneWheelEvent* self, bool accepted);
QEvent* QGraphicsSceneWheelEvent_virtualbase_clone(const VirtualQGraphicsSceneWheelEvent* self);
void QGraphicsSceneWheelEvent_delete(QGraphicsSceneWheelEvent* self);
typedef struct VirtualQGraphicsSceneContextMenuEvent VirtualQGraphicsSceneContextMenuEvent;
typedef struct QGraphicsSceneContextMenuEvent_VTable{
	void (*destructor)(VirtualQGraphicsSceneContextMenuEvent* self);
	void (*setAccepted)(VirtualQGraphicsSceneContextMenuEvent* self, bool accepted);
	QEvent* (*clone)(const VirtualQGraphicsSceneContextMenuEvent* self);
}QGraphicsSceneContextMenuEvent_VTable;
VirtualQGraphicsSceneContextMenuEvent* QGraphicsSceneContextMenuEvent_new(const QGraphicsSceneContextMenuEvent_VTable* vtbl, size_t vdata);
VirtualQGraphicsSceneContextMenuEvent* QGraphicsSceneContextMenuEvent_new2(const QGraphicsSceneContextMenuEvent_VTable* vtbl, size_t vdata, int type);
QPointF* QGraphicsSceneContextMenuEvent_pos(const QGraphicsSceneContextMenuEvent* self);
void QGraphicsSceneContextMenuEvent_setPos(QGraphicsSceneContextMenuEvent* self, QPointF* pos);
QPointF* QGraphicsSceneContextMenuEvent_scenePos(const QGraphicsSceneContextMenuEvent* self);
void QGraphicsSceneContextMenuEvent_setScenePos(QGraphicsSceneContextMenuEvent* self, QPointF* pos);
QPoint* QGraphicsSceneContextMenuEvent_screenPos(const QGraphicsSceneContextMenuEvent* self);
void QGraphicsSceneContextMenuEvent_setScreenPos(QGraphicsSceneContextMenuEvent* self, QPoint* pos);
int QGraphicsSceneContextMenuEvent_modifiers(const QGraphicsSceneContextMenuEvent* self);
void QGraphicsSceneContextMenuEvent_setModifiers(QGraphicsSceneContextMenuEvent* self, int modifiers);
int QGraphicsSceneContextMenuEvent_reason(const QGraphicsSceneContextMenuEvent* self);
void QGraphicsSceneContextMenuEvent_setReason(QGraphicsSceneContextMenuEvent* self, int reason);
void QGraphicsSceneContextMenuEvent_virtualbase_setAccepted(VirtualQGraphicsSceneContextMenuEvent* self, bool accepted);
QEvent* QGraphicsSceneContextMenuEvent_virtualbase_clone(const VirtualQGraphicsSceneContextMenuEvent* self);
void QGraphicsSceneContextMenuEvent_delete(QGraphicsSceneContextMenuEvent* self);
QPointF* QGraphicsSceneHoverEvent_pos(const QGraphicsSceneHoverEvent* self);